--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -1,33 +1,22 @@
-.hidden {
-    display:none;
-}
-
 /* ==================== Reset ==================== */
 
-body {
+body{
     font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #ffffff;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
+h1, h2, h3, h4, h5, h6, p {
     margin-top: 0;
     margin-bottom: 0;
 }
 
-a {
+a{
     color: inherit;
     text-decoration: none;
 }
 
-ul,
-ol {
+ul, ol {
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
@@ -62,21 +51,14 @@ img {
 }
 
 .section-paddings {
-    padding-top: 96px;
-    padding-bottom: 96px;
-}
-
-@media screen and (min-widt:1158px) {
-.section-paddings {
     padding-top: 120px;
     padding-bottom: 120px;
 }
-}
 
 .container {
-    max-width: 320px;
-    padding-left: 16px;
-    padding-right: 16px;
+    max-width:1158px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -95,7 +77,7 @@ img {
 
 /* =================== /COMMON Styles =================== */
 
-/* =================== Mobile Header Styles =================== */
+/* =================== Header Section =================== */
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
@@ -108,6 +90,8 @@ img {
 }
 
 .header-nav {
+    display: flex;
+    align-items: center;
     margin-right: auto;
 }
 
@@ -121,77 +105,19 @@ img {
     color: #4d5ae5;
 }
 
-.header-logo {
-    display: block;
-    padding-top: 16px;
-    padding-bottom: 16px;
-}
-
 .header-logo .logo-part {
     color: #2e2f42;
 }
 
-.nav-list {
-    display: none;
-}
-
-.header-address {
-    display: none;
-}
-
-
-.burger-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    line-height: 0;
-    border: none;
-    background-color: transparent;
-}
-
-.burher-bth-icon {
-    fill: #2f2f37;
-
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.burger-btn:hover .burher-bth-icon,
-.burger-btn:focus .burher-bth-icon {
-    fill: #404bbf;
-}
-
-/* =================== /Mobile Header Styles =================== */
-
-/* =================== Tablet Header Styles =================== */
-
-@media screen and (min-width:768px) {
-
-    .burger-btn {
-        display: none;
-    }
-
-.container {
-max-width: 768px;
-}
-    
-.header-nav {
-    display: flex;
-    align-items: center;
-    margin-right: auto;
-}
-
 .header-logo {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    margin-right: 120px;
+    padding: 24px 0;
+    margin-right: 76px;
 }
 
 .nav-list {
     display: flex;
     align-items: center;
     gap: 40px;
-
 }
 
 .nav-link {
@@ -226,23 +152,21 @@ max-width: 768px;
 }
 
 .header-address {
-    display: block;
     font-style: normal;
 }
 
 .address-list {
     display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
     align-items: center;
-    column-gap: 12px;
+    gap: 40px;
 }
 
 .address-link {
     display: block;
-    font-size: 12px;
-    line-height: 1.7;
-    letter-spacing: 0.04em;
+    padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -255,115 +179,34 @@ max-width: 768px;
     color: #404bbf;
 }
 
-}
+/* =================== /Header Section =================== */
 
-/* =================== /Tablet Header Styles =================== */
-
-/* =================== Laptop Header Styles =================== */
-
-@media screen and (min-width:1158px){
-.container {
-    max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.header-logo {
-    margin-right: 76px;
-}
-
-.address-list {
-    flex-wrap: nowrap;
-    gap: 40px;
-}
-
-.address-link {
-    padding: 24px 0;
-}
-
-}
-
-/* =================== /Laptop Header Styles =================== */
-
-/* =================== Hero Styles =================== */
+/* =================== Hero Section =================== */
 
 .hero-section {
-    max-width: 320px;
+    max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 72px;
-    padding-bottom: 72px;
+    padding-top: 188px;
+    padding-bottom: 188px;
 
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-bg-mobile.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-bg-img.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-color: #2e2f42;
 }
 
-
-@media screen and (min-resolution: 192dpi) {
-    .hero-section {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-bg-mobile@2x.jpg);
-}
-}
-
-@media screen and (min-width:768px) {
-.hero-section {
-    max-width: 768px;
-    padding-top: 112px;
-    padding-bottom: 112px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-bg-tablet.jpg);
-}
-
-@media screen and (min-resolution: 192dpi) {
-.hero-section {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-bg-tablet@2x.jpg);
-}
-}
-}
-
-@media screen and (min-width:1158px) {
-.hero-section {
-    max-width: 1158px;
-    padding-top: 188px;
-    padding-bottom: 188px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-bg-laptop.jpg);
-    }
-
-@media screen and (min-resolution: 192dpi) {
-.hero-section {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-bg-laptop@2x.jpg);
-}
-}
-}
-
 .hero-title {
-    max-width: 216px;
-    margin: 0 auto 72px;
+    max-width: 496px;
+    margin: 0 auto 48px;
 
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
+    font-size: 56px;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffffff;
-}
-
-@media screen and (min-width:768px) {
-.hero-title {
-    max-width: 496px;
-    margin: 0 auto 36px;
-
-    font-size: 56px;
-    line-height: 1.07;
-}
-}
-
-@media screen and (min-width:1158px) {
-.hero-title {
-    margin: 0 auto 48px;
-}
 }
 
 .hero-button {
@@ -375,7 +218,7 @@ max-width: 768px;
 
     border: none;
     border-radius: 4px;
-
+    
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -390,60 +233,16 @@ max-width: 768px;
 
 .hero-button:hover,
 .hero-button:focus {
-    background-color: #404bbf;
+    background-color:#404bbf;
 }
 
-/* =================== /Hero Styles =================== */
+/* =================== /Hero Section =================== */
 
-/* =================== Benefits Styles =================== */
-
-.wrapper-benefits-icon {
-    display: none;
-}
+/* =================== Benefits Section =================== */
 
 .benefits-list {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    row-gap: 72px;
-}
-
-.benefits-title {
-    margin-bottom: 8px;
-
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-}
-
-.benefits-text {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-
-@media screen and (min-width:768px) {
-.benefits-list {
-    column-gap: 24px;
-    row-gap: 72px;
-}
-
-.benefits-item {
-    max-width: calc((100% - 24px)/2);
-}
-
-.benefits-title {
-    text-align: start;
-}
-}
-
-@media screen and (min-width:1158px) {
-.benefits-list {
-    flex-wrap: nowrap;
     gap: 24px;
 }
 
@@ -455,7 +254,6 @@ max-width: 768px;
     display: flex;
     justify-content: center;
     align-items: center;
-
     max-width: 264px;
     height: 112px;
     padding-top: 24px;
@@ -479,14 +277,16 @@ max-width: 768px;
 }
 
 .benefits-text {
-    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
-}
 
 
-/* =================== /Benefits Styles =================== */
 
-/* =================== Team Styles =================== */
+/* =================== /Benefits Section =================== */
+
+/* =================== Team Section =================== */
 
 .team-section {
     background-color: #f4f4fd;
@@ -494,13 +294,13 @@ max-width: 768px;
 
 .team-list {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
-    gap: 72px;
+    gap: 24px;
 }
 
 .team-item {
+    width: calc((100% - 72px)/4);
+
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     border-radius: 0 0 4px 4px;
     background-color: #ffffff
@@ -561,30 +361,7 @@ max-width: 768px;
     fill: #f4f4fd;
 }
 
-@media screen and (min-width:768px) {
-.team-list {
-    column-gap: 24px;
-    row-gap: 64px;
-}
-
-.team-item {
-    max-width: calc((100% - 24px)/2);
-}
-}
-
-@media screen and (min-width:1158px){
-.team-list {
-    justify-content: flex-start;
-    flex-wrap: nowrap;
-    gap: 24px;
-}
-
-.team-item {
-    max-width: calc((100% - 72px)/4);
-}
-}
-
-/* =================== /Team Styles =================== */
+/* =================== /Team Section =================== */
 
 /* =================== Portfolio Section =================== */
 
@@ -592,10 +369,13 @@ max-width: 768px;
     display: flex;
     flex-wrap: wrap;
     row-gap: 48px;
+    column-gap: 24px;
 }
 
 .portfolio-item {
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    width: calc((100% - 48px)/3);
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-wrapper-tumb {
@@ -623,6 +403,7 @@ max-width: 768px;
 
 .portfolio-item:hover {
     cursor: pointer;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-text-ovarlay {
@@ -641,7 +422,6 @@ max-width: 768px;
 
 .portfolio-title {
     margin-bottom: 8px;
-
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -655,51 +435,27 @@ max-width: 768px;
     letter-spacing: 0.02em;
 }
 
-@media screen and (min-width:768px) {
-.portfolio-list {
-    row-gap: 72px;
-    column-gap: 24px;
-}
-
-.portfolio-item {
-    width: calc((100% - 24px)/2);
-}
-}
-
-@media screen and (min-width:1158px) {
-.portfolio-list {
-    row-gap: 48px;
-}
-
-.portfolio-item {
-    width: calc((100% - 48px)/3);
-    box-shadow: none;
-
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-item:hover {
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-}
-
 /* =================== /Portfolio Section =================== */
 
 /* =================== Footer section =================== */
 
 .page-footer {
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: #2e2f42;
 }
 
+.footer-wrraper-main {
+    display: flex;
+    align-items: baseline;
+}
+
 .footer-wrraper-logo {
-    margin-bottom: 72px;
+    margin-right: 120px;
 }
 
 .footer-logo {
-    display: block;
-    text-align: center;
+    display: inline-block;
     margin-bottom: 16px;
 }
 
@@ -708,7 +464,7 @@ max-width: 768px;
 }
 
 .footer-text {
-    max-width: 288px;
+    max-width: 264px;
 
     font-size: 16px;
     line-height: 1.5;
@@ -716,10 +472,15 @@ max-width: 768px;
     color: #f4f4fd;
 }
 
-.footer-wrraper-social{
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-bottom: 72px;
+.footer-social-list {
+    display: flex;
+    gap: 16px;
+
+}
+
+.footer-social-item {
+    width: calc((100% - 48px)/4);
+
 }
 
 .footer-social-text {
@@ -729,18 +490,7 @@ max-width: 768px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #ffffff;
-}
-
-.footer-social-list {
-    display: flex;
-    gap: 16px;
-}
-
-.footer-social-item {
-    width: calc((100% - 48px)/4);
-
 }
 
 .footer-social-link {
@@ -751,7 +501,7 @@ max-width: 768px;
     height: 40px;
 
     border-radius: 50%;
-    background-color: #4d5ae5;
+    background-color:  #4d5ae5;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -765,22 +515,26 @@ max-width: 768px;
     background-color: #31d0aa;
 }
 
+.footer-wraperr-subscribe {
+    width: 453px;
+    margin-left: auto;
+}
+
 .footer-text-subscribe {
+
     margin-bottom: 16px;
 
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #ffffff;
 }
 
 .footer-form-subscribe {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    gap: 16px;
+    gap: 24px;
 }
 
 .footer-label-subscribe {
@@ -788,7 +542,7 @@ max-width: 768px;
 }
 
 .footer-input-subscribe {
-    width: 100%;
+    width: 264px;
     height: 40px;
     padding-left: 16px;
     border: 1px solid #ffffff;
@@ -821,8 +575,6 @@ max-width: 768px;
 
     min-width: 165px;
     height: 40px;
-    margin-right: auto;
-    margin-left: auto;
     border-radius: 4px;
 
     font-weight: 500;
@@ -847,83 +599,10 @@ max-width: 768px;
     background-color: #31D0AA;
 }
 
-@media screen and (min-width:768px) {
-.footer-wrraper-main {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: baseline;
-    column-gap: 24px;
-    row-gap: 72px;
-    padding-left: 108px;
-}
-
-.footer-wrraper-logo {
-    margin-bottom: 0;
-}
-
-.footer-logo {
-    text-align: start;
-}
-
-.footer-text {
-    max-width: 264px;
-}
-
-.footer-wrraper-social {
-    margin-bottom: 0;
-}
-
-.footer-social-text {
-    text-align: start;
-}
-
-.footer-wraperr-subscribe {
-    flex-basis: 453px;
-}
-
-.footer-text-subscribe {
-    text-align: start;
-}
-
-.footer-form-subscribe {
-    flex-wrap: nowrap;
-    gap:24px;
-}
-
-.footer-input-subscribe {
-    max-width: 100%;
-}
-}
-
-@media screen and (min-width:1158px) {
-.footer-wrraper-main {
-    flex-wrap: nowrap;
-    gap: 0;
-    padding-left: 15px;
-}
-
-.footer-wrraper-logo {
-    margin-right: 120px;
-}
-
-.footer-logo {
-    display: inline-block;
-    margin-bottom: 16px;
-}
-
-.footer-wrraper-social {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.footer-wraperr-subscribe {
-    margin-left: auto;
-}
-}
-
 /* =================== /Footer section =================== */
 
-/* =================== Modal window =================== */
+
+/* =================== modal window =================== */
 
 .modal-overlay {
     position: fixed;
@@ -951,9 +630,9 @@ max-width: 768px;
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 288px;
-    min-height: 623px;
-    padding: 72px 16px 24px;
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px;
     transform: translate(-50%, -50%);
 
     border-radius: 4px;
@@ -1009,7 +688,7 @@ max-width: 768px;
 
 .modal-text {
     margin-bottom: 16px;
-
+    
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -1071,7 +750,7 @@ max-width: 768px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-order-input:focus+.modal-order-input-icon {
+.form-order-input:focus + .modal-order-input-icon {
     fill: #4d5ae5;
 }
 
@@ -1108,8 +787,6 @@ max-width: 768px;
 }
 
 .form-order-label-checkbox {
-    display: flex;
-    align-items: center;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
@@ -1120,7 +797,6 @@ max-width: 768px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    flex-shrink: 0;
     margin-right: 8px;
     /* position: absolute;
     left: 0;
@@ -1138,14 +814,14 @@ max-width: 768px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-order-checkbox:checked+.form-order-label-checkbox>.form-order-custom-checkbox {
+.form-order-checkbox:checked + .form-order-label-checkbox > .form-order-custom-checkbox {
     border-radius: 2px;
     border: none;
     background-color: #404bbf;
     fill: #f4f4fd;
 }
 
-.form-order-checkbox:focus+.form-order-label-checkbox>.form-order-custom-checkbox {
+.form-order-checkbox:focus + .form-order-label-checkbox > .form-order-custom-checkbox {
     outline: 1px solid rgba(46, 47, 66, 0.4);
 }
 
@@ -1194,160 +870,4 @@ max-width: 768px;
 .modal-submit-btn:focus {
     background-color: #404bbf;
 }
-
-@media screen and (min-width:768px) {
-.modal {
-    width: 408px;
-    min-height: 584px;
-    padding: 72px 24px 24px;
-}
-}
-
-/* =================== /Modal window =================== */
-
-
-/* =================== Mobile Menu Styles =================== */
-
-.mobile-menu {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left:0;
-    top:0;
-    background-color: #ffffff;
-    z-index: 99999;
-
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-}
-
-.mobile-menu-container {
-    position: relative;
-
-    display: flex;
-    flex-direction: column;
-
-    max-width: 320px;
-    max-height: 640px;
-    height: 100%;
-    padding-top: 72px;
-    padding-bottom: 40px;
-
-}
-
-.mobile-menu-close {
-    position: absolute;
-    top:24px;
-    right: 24px;
-
-    width: 24px;
-    height: 24px;
-    padding: 0;
-    line-height: 0;
-    border: 1px solid#e7e9fc;
-    border-radius: 50%;
-    background-color: transparent;
-}
-
-.mobile-menu-close-icon {
-    fill: #2e2f42;
-}
-
-.mobile-menu-close:hover,
-.mobile-menu-close:focus {
-    background-color: #404bbf;
-    border: none;
-}
-
-.mobile-menu-close:hover .mobile-menu-close-icon,
-.mobile-menu-close:focus .mobile-menu-close-icon {
-    fill: #ffffff;
-}
-
-.mobile-menu-nav {
-    margin-bottom: auto;
-}
-
-.mobile-menu-item:not(:last-child) {
-    margin-bottom: 40px;
-}
-
-.mobile-menu-link {
-    display: block;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.12;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu-link:hover,
-.mobile-menu-link:focus {
-    color: #404bbf;
-}
-
-.mobile-menu-address-link {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #434455;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu-address-item:not(:last-child) {
-    margin-bottom: 24px;
-}
-
-.mobile-menu-address-link:hover,
-.mobile-menu-address-link:focus {
-    color: #4d5ae5;
-}
-
-.mobile-menu-social-list {
-    display: flex;
-    gap: 40px;
-    margin-top: 48px;
-
-}
-
-.mobile-menu-social-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #4d5ae5;
-
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.mobile-menu-social-icon {
-    fill: #f4f4fd;
-}
-
-.mobile-menu-social-link:hover,
-.mobile-menu-social-link:focus {
-    background-color: #404bbf;
-}
-
-@media screen and (min-width:768px) {
-    .mobile-menu {
-        display: none;
-    }
-}
-/* =================== /Mobile Menu Styles =================== */
+/* =================== /modal window =================== */
