--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-.hidden {
-    display:none;
-}
-
 /* ==================== Reset ==================== */
 
 body {
@@ -66,7 +62,7 @@ img {
     padding-bottom: 96px;
 }
 
-@media screen and (min-widt:1158px) {
+@media screen and (min-width:1158px) {
 .section-paddings {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -79,6 +75,20 @@ img {
     padding-right: 16px;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media screen and (min-width:768px){
+.container {
+        max-width: 768px;
+    }
+}
+
+@media screen and (min-width:1158px) {
+.container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
 }
 
 .section-title {
@@ -167,12 +177,8 @@ img {
 
 @media screen and (min-width:768px) {
 
-    .burger-btn {
-        display: none;
-    }
-
-.container {
-max-width: 768px;
+.burger-btn {
+    display: none;
 }
     
 .header-nav {
@@ -235,13 +241,13 @@ max-width: 768px;
     justify-content: flex-end;
     flex-wrap: wrap;
     align-items: center;
-    column-gap: 12px;
+    gap: 12px;
 }
 
 .address-link {
     display: block;
     font-size: 12px;
-    line-height: 1.7;
+    line-height: 1.17;
     letter-spacing: 0.04em;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -262,11 +268,6 @@ max-width: 768px;
 /* =================== Laptop Header Styles =================== */
 
 @media screen and (min-width:1158px){
-.container {
-    max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
 
 .header-logo {
     margin-right: 76px;
@@ -279,6 +280,9 @@ max-width: 768px;
 
 .address-link {
     padding: 24px 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 }
@@ -1237,7 +1241,6 @@ max-width: 768px;
     flex-direction: column;
 
     max-width: 320px;
-    max-height: 640px;
     height: 100%;
     padding-top: 72px;
     padding-bottom: 40px;
@@ -1298,6 +1301,7 @@ max-width: 768px;
 }
 
 .mobile-menu-address-link {
+    font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
